# solarpark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.do/: deploy.template.yaml
solarpark/: authentication.py  settings.py  setup.py
solarpark/api/: __init__.py  admin.py  analytics.py  dividends.py  economics.py  error_log.py  generate.py  hooks.py  leads.py  members.py  payments.py  send_email.py  send_member_summary.py  shares.py
solarpark/logging/: log_config.py
solarpark/models/: dividends.py  economics.py  email.py  error_log.py  leads.py  members.py  payments.py  shares.py
solarpark/persistence/: __init__.py  database.py  dividends.py  economics.py  error_log.py  generate.py  hooks.py  leads.py  members.py  payments.py  send_email.py  shares.py
solarpark/persistence/models/: dividends.py  economics.py  error_log.py  leads.py  members.py  payments.py  shares.py
solarpark/services/: __init__.py  loopia.py  resend.py  sendgrid.py
solarpark/templates/: email.html  pdf.html  summary-mail.html  summary.html  summary_email.html
solarpark/tests/: conftest.py  test_economics.py  test_members.py  test_shares.py
