[tool.poetry]
name = "solarpark-service"
version = "0.0.2"
description = "Solar Park"
authors = ["Our Studio <simon@ourstudio.se>"]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2024.7.4"
cryptography = "^43.0.0"
fastapi = "^0.112.2"
geopy = "^2.4.1"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"
psycopg2 = "^2.9.10"
pydantic = "^2.2.1"
pydantic-settings = "^2.0.3"
pyjwt = "^2.9.0"
pyjwt-key-fetcher = "^0.8.0"
python-dotenv = "^1.0.1"
python-json-logger = "^2.0.7"
python-multipart = "^0.0.9"
requests = "^2.32.3"
sendgrid = "^6.11.0"
setuptools = "^75.8.2"
SQLAlchemy = "^2.0.23"
structlog = "^24.4.0"
uvicorn = "^0.30.6"
pre-commit = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pre-commit = ">=4.1.0,<5.0.0"  

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
