[tool.poetry]
name = "solarpark-service"
version = "0.0.2"
description = "Solar Park"
authors = ["Our Studio <simon@ourstudio.se>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
certifi = "^2025.6.15"
cryptography = "^45.0.0"
fastapi = "^0.115.14"
geopy = "^2.4.1"
httpx = "^0.28.1"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"
psycopg2 = "^2.9.10"
pydantic = "^2.11.7"
pydantic-settings = "^2.0.3"
pyjwt = "^2.9.0"
pyjwt-key-fetcher = "^0.8.0"
python-dotenv = "^1.0.1"
python-json-logger = "^3.3.0"
python-multipart = "^0.0.20"
requests = "^2.32.3"
sendgrid = "^6.11.0"
setuptools = "^80.9.0"
SQLAlchemy = "^2.0.23"
structlog = "^25.4.0"
uvicorn = "^0.35.0"
pre-commit = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = ">=4.1.0,<5.0.0"  

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
