[tool.poetry]
name = "solarpark-service"
version = "0.0.2"
description = "Solar Park"
authors = ["Our Studio <hej@ourstudio.se>"]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2024.7.4"
cryptography = "^43.0.0"
fastapi = "^0.112.2"
geopy = "^2.4.1"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"
psycopg2 = "2.9.10"
pydantic = "^2.2.1"
pydantic-settings = "^2.0.3"
pyjwt = "^2.9.0"
pyjwt-key-fetcher = "^0.8.0"
python-dotenv = "^1.0.1"
python-json-logger = "^2.0.7"
python-multipart = "^0.0.9"
requests = "^2.32.3"
setuptools = "^68.1.2"
SQLAlchemy = "^2.0.23"
structlog = "^24.4.0"
uvicorn = "^0.30.6"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[poetry.group.dev.dependencies]
pytest = "7.2.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
